# pdf2md

./: .coverage  .pre-commit-config.yaml  README.md  analyze_pdfs.py  compare_extraction_methods.py  generate_test_pdfs.py  pyproject.toml  reorganize_pdfs.py  test_loader.py  test_real_world.py  visualize_pdf_issues.py
real-world-pdfs/: ANALYSIS_SUMMARY.md  README.md  analysis_detailed.json  analysis_summary.txt
real-world-pdfs/detailed_analysis/: 2857439_spatial_analysis.txt  Bunge_loadingstatement_2025-09-25_spatial_analysis.txt  CBH Shipping Stem 26092025_spatial_analysis.txt  Loading-Statement-for-Web-Portal-20250923_spatial_analysis.txt  Shipping-Stem-2025-09-30_spatial_analysis.txt  combined_spatial_analysis.txt  document (1)_spatial_analysis.txt  shipping-stem-2025-11-13_spatial_analysis.txt  shipping_stem-accc-30092025-1_spatial_analysis.txt
real-world-pdfs/extraction_comparison/: CBH Shipping Stem 26092025_comparison.txt  document (1)_comparison.txt  shipping_stem-accc-30092025-1_comparison.txt
src/pdf2md/: __init__.py  api.py
src/pdf2md/analysis/: __init__.py
src/pdf2md/core/: __init__.py  bbox.py  document.py  exceptions.py
src/pdf2md/generators/: __init__.py
src/pdf2md/io/: __init__.py  exporter.py  loader.py
src/pdf2md/quality/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_bbox.py  test_document.py
